--- a/Views/User/Index.cshtml
+++ b/Views/User/Index.cshtml
@@ -1,17 +1,54 @@
-﻿@{
-    Layout = null;
-}
+﻿@model List<CadastroUsuario.Models.TableViewModels.UserTableViewModel>
+@{ ViewBag.Title = "Index"; }
 
-<!DOCTYPE html>
+<h2>Usuarios</h2>
 
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title></title>
-</head>
-<body>
-    <div>
-    
+<div class="row">
+    <div class="col-md-12">
+        <input type="button" class="btn btn-primary" value="nuevo" onclick="document.location.href='@Url.Content("~/User/Add")'" />
     </div>
-</body>
-</html>
+</div>
+<br />
+<div class="row">
+    <div class="col-lg-12">
+        <table class="table table-bordered">
+            <tr>
+                <th>#</th>
+                <th>UsuarioId</th>
+                <th>Nome</th>
+                <th>Login</th>
+                <th>Senha</th>
+                <th>Admin</th>
+                <th></th>
+            </tr>
+            @foreach (var oElemento in Model)
+            {
+        <tr>
+            <td>@oElemento.UsuarioId</td>
+            <td>@oElemento.Nome</td>
+            <td>@oElemento.Login</td>
+            <td>@oElemento.Senha</td>
+            <td>@oElemento.IsAdmin</td>
+            <td>
+                <input type="button" onclick="jsDelete(@oElemento.UsuarioId)" value="Eliminar" class="btn btn-danger" />
+                <input type="button" value="Editar" class="btn btn-danger" onclick="document.location.href='@Url.Content("~/User/Edit/"+oElemento.UsuarioId)'" />
+            </td>
+        </tr>            }
+        </table>
+    </div>
+</div>
+
+<script>
+    function jsDelete(id) {
+        url = "@Url.Content("~/User/Delete")" + "/" + id;
+
+        $.post(url, function (data) {
+            if (data == 1) {
+                document.location.href = "@Url.Content("~/User/Index")";
+            }
+            else {
+                alert("Ocurrio un error");
+            }
+        })
+    }
+</script>
