--- a/Views/User/Index.cshtml
+++ b/Views/User/Index.cshtml
@@ -46,7 +46,7 @@
                 document.location.href = "@Url.Content("~/User/Index")";
             }
             else {
-                alert("Ocurrio un error");
+                alert("Ocorreu um erro");
             }
         })
     }
